--- a/style/main.scss
+++ b/style/main.scss
@@ -79,9 +79,8 @@ p{
     width: 50%;
 
     .coled{
-        background-color: hsl(277, 64%, 61%);
+        background-color: hsla(277, 76%, 30%, 0.5);
         border-radius: inherit;
-        opacity: 0.6;
         z-index: 4;
         width: 100%;
         height: 100%;
